test/snapshot/negative/strict_mode_injection/compile.hxml
-cp .
-lib reflaxe.go
-D go_output=out
-D reflaxe_go_strict
-main Main
